--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import BlogCards from '../components/BlogCards';
+const blogs = await Astro.glob('./blogs/*.md');
 ---
 
 <Layout title="Welcome to Astro.">
     <main>
-        <h1>Welcome to <span class="text-gradient">Astro</span></h1>
-        <p class="instructions">
-            Check out the <code>src/pages</code> directory to get started.<br />
-            <strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
-            above.
-        </p>
-        <ul role="list" class="link-card-grid">
-            <Card
-                href="https://docs.astro.build/"
-                title="Documentation"
-                body="Learn how Astro works and explore the official API docs."
-            />
-            <Card
-                href="https://astro.build/integrations/"
-                title="Integrations"
-                body="Supercharge your project with new frameworks and libraries."
-            />
-            <Card
-                href="https://astro.build/themes/"
-                title="Themes"
-                body="Explore a galaxy of community-built starter themes."
-            />
-            <Card
-                href="https://astro.build/chat/"
-                title="Chat"
-                body="Come say hi to our amazing Discord community. ❤️"
-            />
-        </ul>
+        <h1>ゐてるまの部屋</h1>
+        <BlogCards posts={blogs} />
     </main>
 </Layout>
 
